<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<include layout="@layout/title" />
	    <LinearLayout
	        android:layout_width="fill_parent"
        	android:layout_height="40dp"
        	android:orientation="horizontal"
        	android:gravity="center"
        	android:background="@android:color/white">
        	<TextView android:id="@+id/tv_homepage"
        		android:text="@string/EM_DETAIL_HOMEPAGE"
        		style="@style/page_title"/>
        	<TextView android:id="@+id/tv_aboutus"
        		android:text="@string/EM_DETAIL_ABOUTUS"
        		style="@style/page_title"/>
        	<TextView android:id="@+id/tv_service"
        		android:text="@string/EM_DETAIL_SERVICE"
        		style="@style/page_title"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header">
    </android.support.v4.view.ViewPager>
</RelativeLayout>
